# Arcade

./: CMakeLists.txt
doc/: AddGames.txt  AddLibrairie.txt
src/core/: Core.cpp  Core.hpp  main.cpp
src/core/dl/: dl.cpp
src/games/: IGames.hpp
src/games/Nibbler/: NibblerGame.cpp  NibblerMove.cpp
src/games/Nibbler/includes/: NibblerGame.hpp
src/games/Nibbler/maps/: map1.txt  map14.txt  map2.txt  map3.txt
src/games/Pacman/: Bot.cpp  Bot.hpp  Pac.cpp  Pac.hpp  Player.cpp  Player.hpp  mapPacMAn.txt  mapPacv2.txt
src/lib/: ILib.hpp
src/lib/NCURSES/: NCURSES.cpp  NCURSES.hpp
src/lib/SDL2/: SDL.cpp  SDL.hpp
src/lib/SFML/: SFML.cpp  SFML.hpp
